--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kai-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "ts-node ."
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "ts-node": "^10.9.2"
   },
